# MST

./: .gitignore  .gitmodules  CMakeLists.txt
src/: DisjointSet.cpp  DisjointSet.h  Graph.cpp  Graph.h  HelplerFunctions.h  MST.puml  Makefile  SortingAlgorithms.h  kruskaltest.cpp
src/tests/: CMakeLists.txt  DisjointSetTests.cpp  GraphTests.cpp
src/tests/test_files/: test01.in  test02.in  test03.out  test05.in  test06.out  test07.in  test07.out  test08.in  test08.out
src/tests/test_files/P3TestsF20/t01/: desc  test.out
src/tests/test_files/P3TestsF20/t02/: desc  test.out
src/tests/test_files/P3TestsF20/t03/: desc  test.in
src/tests/test_files/P3TestsF20/t04/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t05/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t06/: desc  test.in
src/tests/test_files/P3TestsF20/t07/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t08/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t09/: desc  test.in
src/tests/test_files/P3TestsF20/t10/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t11/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t12/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t13/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t14/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t15/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t16/: desc  test.in  test.out
src/tests/test_files/P3TestsF20/t17/: desc  test.in  test.out  test17.out
src/tests/test_files/P3TestsF20/t18/: desc  test.in  test.out
